# mac_os_alarmer

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  checks.py  config.json.example  install_launchagent.sh  main.py  notifiers.py  pyproject.toml  requirements.txt  test_alert.py
.agents/: AGENTS.md
